<resources>
    <string name="app_name">Attendance System</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="about_us">About us.</string>
    <string name="show_password">show password</string>
    <string name="about_string_about_us">About us</string>
    <string name="login_txt">Login</string>


    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>
</resources>
